[package]
name = "cch23-dhconnelly"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
shuttle-axum = { version = "0.34.1", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.34.1"
tokio = "1.28.2"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
